@@ -159,6 +159,7 @@ static inline size_t WriteCALSLSBLong(FILE *file,const unsigned int value)
   return(fwrite(buffer,1,4,file));
 }
 
+#if defined(MAGICKCORE_TIFF_DELEGATE)
 static Image *Huffman2DDecodeImage(const ImageInfo *image_info,Image *image,
   ExceptionInfo *exception)
 {
@@ -239,6 +240,17 @@ static Image *Huffman2DDecodeImage(const ImageInfo *image_info,Image *image,
   (void) RelinquishUniqueFileResource(filename);
   return(huffman_image);
 }
+#else
+static Image *Huffman2DDecodeImage(const ImageInfo *magick_unused(image_info),
+  Image *image,ExceptionInfo *exception)
+{
+  assert(image != (Image *) NULL);
+  assert(image->signature == MagickSignature);
+  (void) ThrowMagickException(exception,GetMagickModule(),MissingDelegateError,
+    "DelegateLibrarySupportNotBuiltIn","`%s' (TIFF)",image->filename);
+  return((Image *) NULL);
+}
+#endif
 
 static Image *ReadCALSImage(const ImageInfo *image_info,
   ExceptionInfo *exception)
@@ -442,6 +454,7 @@ ModuleExport void UnregisterCALSImage(void)
 %
 */
 
+#if defined(MAGICKCORE_TIFF_DELEGATE)
 static MagickBooleanType Huffman2DEncodeImage(const ImageInfo *image_info,
   Image *image,Image *inject_image)
 {
@@ -567,6 +580,24 @@ static MagickBooleanType Huffman2DEncodeImage(const ImageInfo *image_info,
   (void) RelinquishUniqueFileResource(filename);
   return(MagickTrue);
 }
+#else
+static MagickBooleanType Huffman2DEncodeImage(const ImageInfo *image_info,
+  Image *image,Image *inject_image)
+{
+  assert(image_info != (const ImageInfo *) NULL);
+  assert(image_info->signature == MagickSignature);
+  assert(image != (Image *) NULL);
+  assert(image->signature == MagickSignature);
+  if (image->debug != MagickFalse)
+    (void) LogMagickEvent(TraceEvent,GetMagickModule(),"%s",image->filename);
+  assert(inject_image != (Image *) NULL);
+  assert(inject_image->signature == MagickSignature);
+  (void) ThrowMagickException(&image->exception,GetMagickModule(),
+    MissingDelegateError,"DelegateLibrarySupportNotBuiltIn","`%s' (TIFF)",
+    image->filename);
+  return(MagickFalse);
+}
+#endif
 
 static ssize_t WriteCALSRecord(Image *image,const char *data)
 {
