@@ -851,6 +851,7 @@ static char *EscapeParenthesis(const char *text)
   return(buffer);
 }
 
+#if defined(MAGICKCORE_TIFF_DELEGATE)
 static MagickBooleanType Huffman2DEncodeImage(const ImageInfo *image_info,
   Image *image,Image *inject_image)
 {
@@ -976,6 +977,24 @@ static MagickBooleanType Huffman2DEncodeImage(const ImageInfo *image_info,
   (void) RelinquishUniqueFileResource(filename);
   return(MagickTrue);
 }
+#else
+static MagickBooleanType Huffman2DEncodeImage(const ImageInfo *image_info,
+  Image *image,Image *inject_image)
+{
+  assert(image_info != (const ImageInfo *) NULL);
+  assert(image_info->signature == MagickSignature);
+  assert(image != (Image *) NULL);
+  assert(image->signature == MagickSignature);
+  if (image->debug != MagickFalse)
+    (void) LogMagickEvent(TraceEvent,GetMagickModule(),"%s",image->filename);
+  assert(inject_image != (Image *) NULL);
+  assert(inject_image->signature == MagickSignature);
+  (void) ThrowMagickException(&image->exception,GetMagickModule(),
+    MissingDelegateError,"DelegateLibrarySupportNotBuiltIn","`%s' (TIFF)",
+    image->filename);
+  return(MagickFalse);
+}
+#endif
 
 static MagickBooleanType WritePDFImage(const ImageInfo *image_info,Image *image)
 {
